--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@dank-style/react": "latest",
+    "@expo-google-fonts/inter": "^0.2.3",
     "@expo/html-elements": "^0.4.1",
     "@expo/webpack-config": "^18.0.1",
     "@gluestack-ui/actionsheet": "latest",
@@ -43,6 +44,8 @@
     "@gluestack/ui-next-adapter": "latest",
     "@universa11y/switch": "0.1.1",
     "expo": "~48.0.4",
+    "expo-app-loading": "^2.1.1",
+    "expo-font": "~11.1.1",
     "expo-image": "~1.0.0",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
