--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@dank-style/animation-plugin": "latest",
-    "@dank-style/react": "latest",
+    "@dank-style/react": "0.3.11",
     "@expo-google-fonts/inter": "^0.2.3",
     "@expo/html-elements": "^0.4.1",
     "@expo/webpack-config": "^18.0.1",
@@ -49,6 +49,7 @@
     "expo-font": "~11.1.1",
     "expo-image": "~1.0.0",
     "expo-status-bar": "~1.4.4",
+    "lucide-react-native": "^0.161.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.3"
