--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@expo/html-elements": "latest",
     "@expo/webpack-config": "^18.0.1",
     "@gluestack-ui/actionsheet": "latest",
+    "@gluestack-ui/alert": "latest",
     "@gluestack-ui/alert-dialog": "latest",
     "@gluestack-ui/avatar": "latest",
     "@gluestack-ui/button": "latest",
     "@gluestack-ui/checkbox": "latest",
     "@gluestack-ui/divider": "latest",
     "@gluestack-ui/fab": "latest",
+    "@gluestack-ui/form-control": "latest",
     "@gluestack-ui/hstack": "latest",
     "@gluestack-ui/icon": "latest",
     "@gluestack-ui/input": "latest",
@@ -47,14 +49,13 @@
     "expo-app-loading": "^2.1.1",
     "expo-font": "~11.1.1",
     "expo-image": "~1.0.0",
+    "expo-linear-gradient": "~12.1.2",
     "expo-status-bar": "~1.4.4",
     "lucide-react-native": "^0.161.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.3",
-    "react-native-svg": "latest",
-    "@gluestack-ui/alert": "latest",
-    "@gluestack-ui/form-control": "latest"
+    "react-native-svg": "latest"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
