--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@dank-style/animation-plugin": "latest",
-    "@dank-style/react": "0.4.6",
+    "@dank-style/react": "^0.4.8-alpha.0",
     "@expo-google-fonts/inter": "^0.2.3",
     "@expo/html-elements": "latest",
     "@expo/webpack-config": "^18.0.1",
@@ -55,10 +55,11 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.3",
-    "react-native-svg": "latest"
+    "react-native-svg": "13.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@dank-style/babel-plugin-styled-resolver": "^0.3.5",
     "@types/react": "~18.0.14",
     "react-native-web": "^0.18.12",
     "typescript": "^4.9.4"
