--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@dank-style/animation-plugin": "latest",
-    "@dank-style/react": "^0.4.8-alpha.0",
+    "@dank-style/react": "^0.4.9",
     "@expo-google-fonts/inter": "^0.2.3",
     "@expo/html-elements": "latest",
     "@expo/webpack-config": "^18.0.1",
