--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@dank-style/animation-plugin": "latest",
-    "@dank-style/react": "^0.4.9",
+    "@gluestack-style/animation-plugin": "latest",
+    "@gluestack-style/react": "latest",
     "@expo-google-fonts/inter": "^0.2.3",
     "@expo/html-elements": "latest",
     "@expo/webpack-config": "^18.0.1",
@@ -51,25 +51,23 @@
     "expo": "^48.0.17",
     "expo-app-loading": "^2.1.1",
     "expo-font": "~11.1.1",
-    "expo-image": "~1.0.0",
+    "expo-image": "~1.0.1",
     "expo-linear-gradient": "~12.1.2",
+    "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
     "expo-updates": "~0.16.4",
     "install": "^0.13.0",
     "lucide-react-native": "^0.161.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.71.8",
-    "react-native-svg": "13.4.0",
-    "react-navigation": "^4.4.4",
-    "react-navigation-tabs": "^2.11.2",
-    "expo-splash-screen": "~0.18.2"
+    "react-native": "0.71.3",
+    "react-native-svg": "latest"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@dank-style/babel-plugin-styled-resolver": "^0.3.5",
-    "@types/react": "~18.0.14",
-    "react-native-web": "^0.18.12",
+    "@gluestack-style/babel-plugin-styled-resolver": "latest",
+    "@types/react": "~18.0.27",
+    "react-native-web": "~0.18.11",
     "typescript": "^4.9.4"
   },
   "private": true
