--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@gluestack-style/animation-plugin": "latest",
-    "@gluestack-style/react": "latest",
     "@expo-google-fonts/inter": "^0.2.3",
     "@expo/html-elements": "latest",
     "@expo/webpack-config": "^18.0.1",
+    "@gluestack-style/animation-plugin": "latest",
+    "@gluestack-style/react": "latest",
     "@gluestack-ui/actionsheet": "latest",
     "@gluestack-ui/alert": "latest",
     "@gluestack-ui/alert-dialog": "latest",
@@ -67,6 +67,7 @@
     "@babel/core": "^7.20.0",
     "@gluestack-style/babel-plugin-styled-resolver": "latest",
     "@types/react": "~18.0.27",
+    "@types/react-native": "^0.72.2",
     "react-native-web": "~0.18.11",
     "typescript": "^4.9.4"
   },
