--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "@expo-google-fonts/inter": "^0.2.3",
     "@expo/html-elements": "latest",
-    "@expo/webpack-config": "^18.0.1",
+    "@expo/webpack-config": "18.1.0",
     "@gluestack-style/animation-plugin": "latest",
     "@gluestack-style/react": "latest",
     "@gluestack-ui/actionsheet": "latest",
@@ -43,7 +43,7 @@
     "@gluestack-ui/tooltip": "latest",
     "@gluestack-ui/vstack": "latest",
     "@gluestack/ui-next-adapter": "latest",
-    "@legendapp/motion": "latest",
+    "@legendapp/motion": "^2.2.0",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
@@ -65,9 +65,14 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@babel/plugin-transform-modules-commonjs": "^7.21.5",
+    "@babel/preset-env": "^7.22.4",
+    "@babel/preset-react": "^7.22.3",
     "@gluestack-style/babel-plugin-styled-resolver": "latest",
     "@types/react": "~18.0.27",
     "@types/react-native": "^0.72.2",
+    "babel-loader": "^9.1.2",
+    "postcss-loader": "^7.3.2",
     "react-native-web": "~0.18.11",
     "typescript": "^4.9.4"
   },
