feat: appjson corre cted

--- a/app.json
+++ b/app.json
@@ -26,8 +26,7 @@
       "package": "com.meenumakkar.clitestexpo"
     },
     "web": {
-      "favicon": "./assets/favicon.png",
-      "bundler": "metro"
+      "favicon": "./assets/favicon.png"
     },
     "extra": {
       "eas": {
