--- a/package.json
+++ b/package.json
@@ -61,7 +61,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.3",
-    "react-native-svg": "latest"
+    "react-native-svg": "latest",
+    "webpack": "5.83.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
