--- a/package.json
+++ b/package.json
@@ -60,8 +60,8 @@
     "lucide-react-native": "^0.161.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.71.3",
-    "react-native-svg": "latest",
+    "react-native": "0.71.8",
+    "react-native-svg": "13.4.0",
     "webpack": "5.83.1"
   },
   "devDependencies": {
