--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "start": "expo start --dev-client",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "dev": "expo start --offline"
   },
   "dependencies": {
     "@expo-google-fonts/inter": "^0.2.3",
@@ -73,6 +74,7 @@
     "@types/react": "~18.0.27",
     "@types/react-native": "^0.72.2",
     "babel-loader": "^9.1.2",
+    "babel-plugin-transform-remove-console": "^6.9.4",
     "postcss-loader": "^7.3.2",
     "react-native-web": "~0.18.11",
     "typescript": "^4.9.4"
