fix: upgrade version

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@gluestack-ui/alert-dialog": "latest",
     "@gluestack-ui/avatar": "latest",
     "@gluestack-ui/button": "latest",
-    "@gluestack-ui/checkbox": "latest",
+    "@gluestack-ui/checkbox": "0.1.9",
     "@gluestack-ui/divider": "latest",
     "@gluestack-ui/fab": "latest",
     "@gluestack-ui/form-control": "latest",
@@ -48,7 +48,7 @@
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@react-navigation/stack": "^6.3.16",
-    "expo": "^48.0.17",
+    "expo": "~48.0.18",
     "expo-app-loading": "^2.1.1",
     "expo-font": "~11.1.1",
     "expo-image": "~1.0.1",
