--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@expo/html-elements": "latest",
     "@expo/webpack-config": "18.1.0",
     "@gluestack-style/animation-plugin": "latest",
-    "@gluestack-style/react": "0.1.14",
+    "@gluestack-style/react": "0.1.24",
     "@gluestack-ui/actionsheet": "latest",
     "@gluestack-ui/alert": "latest",
     "@gluestack-ui/alert-dialog": "latest",
@@ -62,7 +62,8 @@
     "react-dom": "18.2.0",
     "react-native": "0.71.8",
     "react-native-svg": "latest",
-    "webpack": "5.83.1"
+    "webpack": "5.83.1",
+    "webpack-dev-server": "^4.15.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
