--- a/package.json
+++ b/package.json
@@ -44,6 +44,9 @@
     "@gluestack-ui/vstack": "latest",
     "@gluestack/ui-next-adapter": "latest",
     "@legendapp/motion": "latest",
+    "@react-native-aria/focus": "^0.2.8",
+    "@react-native-aria/interactions": "^0.2.10",
+    "@react-native-aria/overlays": "^0.3.7",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
@@ -71,7 +74,7 @@
     "@babel/preset-env": "^7.22.4",
     "@babel/preset-react": "^7.22.3",
     "@gluestack-style/babel-plugin-styled-resolver": "latest",
-    "@types/react": "~18.0.27",
+    "@types/react": "^18.2.13",
     "@types/react-native": "^0.72.2",
     "babel-loader": "^9.1.2",
     "postcss-loader": "^7.3.2",
