feat: pulled latest

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@gluestack-ui/alert-dialog": "latest",
     "@gluestack-ui/avatar": "latest",
     "@gluestack-ui/button": "latest",
-    "@gluestack-ui/checkbox": "0.1.9",
+    "@gluestack-ui/checkbox": "latest",
     "@gluestack-ui/divider": "latest",
     "@gluestack-ui/fab": "latest",
     "@gluestack-ui/form-control": "latest",
@@ -33,7 +33,7 @@
     "@gluestack-ui/progress": "latest",
     "@gluestack-ui/provider": "latest",
     "@gluestack-ui/radio": "latest",
-    "@gluestack-ui/select": "latest",
+    "@gluestack-ui/select": "^0.1.9",
     "@gluestack-ui/slider": "latest",
     "@gluestack-ui/spinner": "latest",
     "@gluestack-ui/switch": "latest",
