--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@gluestack-ui/alert-dialog": "latest",
     "@gluestack-ui/avatar": "latest",
     "@gluestack-ui/button": "latest",
-    "@gluestack-ui/checkbox": "latest",
+    "@gluestack-ui/checkbox": "^0.1.13",
     "@gluestack-ui/divider": "latest",
     "@gluestack-ui/fab": "latest",
     "@gluestack-ui/form-control": "latest",
