feat: updated latest and fixed few warnings

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@gluestack-ui/alert-dialog": "latest",
     "@gluestack-ui/avatar": "latest",
     "@gluestack-ui/button": "latest",
-    "@gluestack-ui/checkbox": "^0.1.13",
+    "@gluestack-ui/checkbox": "latest",
     "@gluestack-ui/divider": "latest",
     "@gluestack-ui/fab": "latest",
     "@gluestack-ui/form-control": "latest",
@@ -33,7 +33,7 @@
     "@gluestack-ui/progress": "latest",
     "@gluestack-ui/provider": "latest",
     "@gluestack-ui/radio": "latest",
-    "@gluestack-ui/select": "^0.1.9",
+    "@gluestack-ui/select": "latest",
     "@gluestack-ui/slider": "latest",
     "@gluestack-ui/spinner": "latest",
     "@gluestack-ui/switch": "latest",
@@ -74,7 +74,7 @@
     "@babel/preset-env": "^7.22.4",
     "@babel/preset-react": "^7.22.3",
     "@gluestack-style/babel-plugin-styled-resolver": "latest",
-    "@types/react": "^18.2.13",
+    "@types/react": "~18.0.27",
     "@types/react-native": "^0.72.2",
     "babel-loader": "^9.1.2",
     "postcss-loader": "^7.3.2",
