--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "ui-kitchensink",
-    "slug": "ui-kitchensink",
+    "name": "kitchensink-app",
+    "slug": "kitchensink-app",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -32,11 +32,11 @@
       "policy": "sdkVersion"
     },
     "updates": {
-      "url": "https://u.expo.dev/e65da6cb-22b8-414f-988a-ce36cb19270a"
+      "url": "https://u.expo.dev/72e83d84-acc2-4675-a0a8-95d0f5fea5b4"
     },
     "extra": {
       "eas": {
-        "projectId": "e65da6cb-22b8-414f-988a-ce36cb19270a"
+        "projectId": "72e83d84-acc2-4675-a0a8-95d0f5fea5b4"
       }
     }
   }
