--- a/package.json
+++ b/package.json
@@ -64,9 +64,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.8",
-    "react-native-svg": "latest",
-    "webpack": "5.83.1",
-    "webpack-dev-server": "^4.15.1"
+    "react-native-svg": "latest"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
