--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@expo/html-elements": "latest",
     "@expo/webpack-config": "18.1.0",
     "@gluestack-style/animation-plugin": "latest",
-    "@gluestack-style/react": "0.1.31",
+    "@gluestack-style/react": "0.1.34-alpha.3",
     "@gluestack-ui/actionsheet": "latest",
     "@gluestack-ui/alert": "latest",
     "@gluestack-ui/alert-dialog": "latest",
@@ -22,7 +22,7 @@
     "@gluestack-ui/divider": "latest",
     "@gluestack-ui/fab": "latest",
     "@gluestack-ui/form-control": "latest",
-    "@gluestack-ui/hstack": "latest",
+    "@gluestack-ui/hstack": "0.1.9-alpha.0",
     "@gluestack-ui/icon": "latest",
     "@gluestack-ui/input": "latest",
     "@gluestack-ui/link": "latest",
@@ -41,7 +41,7 @@
     "@gluestack-ui/textarea": "latest",
     "@gluestack-ui/toast": "latest",
     "@gluestack-ui/tooltip": "latest",
-    "@gluestack-ui/vstack": "latest",
+    "@gluestack-ui/vstack": "0.1.10-alpha.0",
     "@gluestack/ui-next-adapter": "latest",
     "@legendapp/motion": "latest",
     "@react-native-aria/focus": "^0.2.8",
