--- a/package.json
+++ b/package.json
@@ -11,10 +11,8 @@
     "@expo-google-fonts/inter": "^0.2.3",
     "@expo/html-elements": "latest",
     "@expo/webpack-config": "18.1.0",
-    "@gluestack-style/animation-plugin": "latest",
     "@gluestack-style/react": "^1.0.4",
     "@gluestack-ui/themed": "latest",
-    "@gluestack/ui-next-adapter": "latest",
     "@legendapp/motion": "latest",
     "expo": "~48.0.18",
     "expo-app-loading": "^2.1.1",
@@ -36,7 +34,7 @@
     "@babel/plugin-transform-modules-commonjs": "^7.21.5",
     "@babel/preset-env": "^7.22.4",
     "@babel/preset-react": "^7.22.3",
-    "@gluestack-style/babel-plugin-styled-resolver": "latest",
+    "@gluestack-style/babel-plugin-styled-resolver": "^0.2.6",
     "@types/react": "~18.0.27",
     "@types/react-native": "^0.72.2",
     "babel-loader": "^9.1.2",
