--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
   "dependencies": {
     "@expo-google-fonts/inter": "^0.2.3",
     "@expo/html-elements": "latest",
-    "@expo/webpack-config": "18.1.0",
-    "@gluestack-style/react": "^1.0.5",
-    "@gluestack-ui/themed": "latest",
+    "@expo/webpack-config": "^18.0.1",
+    "@gluestack-style/react": "^1.0.48",
+    "@gluestack-ui/config": "^1.1.11",
+    "@gluestack-ui/themed": "^1.1.35",
     "@legendapp/motion": "latest",
-    "expo": "~48.0.18",
+    "expo": "~50.0.18",
     "expo-app-loading": "^2.1.1",
     "expo-font": "~11.1.1",
-    "expo-image": "~1.0.1",
+    "expo-image": "~1.0.2",
     "expo-linear-gradient": "~12.1.2",
     "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
@@ -26,20 +27,22 @@
     "lucide-react-native": "^0.161.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.71.13",
-    "react-native-svg": "13.4.0"
+    "react-native": "0.73.2",
+    "react-native-svg": "14.1.0",
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
     "@babel/plugin-transform-modules-commonjs": "^7.21.5",
     "@babel/preset-env": "^7.22.4",
     "@babel/preset-react": "^7.22.3",
     "@gluestack-style/babel-plugin-styled-resolver": "^0.2.6",
-    "@types/react": "~18.0.27",
     "@types/react-native": "^0.72.2",
     "babel-loader": "^9.1.2",
     "postcss-loader": "^7.3.2",
     "react-native-web": "~0.18.11",
+    "@babel/core": "^7.20.0",
+    "@expo/webpack-config": "~19.0.1",
+    "@types/react": "~18.2.45",
     "typescript": "^5.1.3"
   },
   "private": true
