--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@expo/metro-runtime": "~3.1.3",
     "@gluestack-style/react": "^1.0.48",
     "@gluestack-ui/accordion": "latest",
-    "@gluestack-ui/actionsheet": "latest",
+    "@gluestack-ui/actionsheet": "0.2.41",
     "@gluestack-ui/alert": "latest",
     "@gluestack-ui/alert-dialog": "latest",
     "@gluestack-ui/avatar": "latest",
@@ -42,7 +42,7 @@
     "@gluestack-ui/textarea": "latest",
     "@gluestack-ui/themed": "^1.1.8",
     "@gluestack-ui/toast": "latest",
-    "@gluestack-ui/tooltip": "latest",
+    "@gluestack-ui/tooltip": "^0.1.30",
     "@legendapp/motion": "latest",
     "@react-aria/utils": "3.22.0",
     "clsx": "^2.1.0",
@@ -60,7 +60,7 @@
     "nativewind": "latest",
     "react": "latest",
     "react-dom": "18.2.0",
-    "react-native": "latest",
+    "react-native": "0.73.6",
     "react-native-reanimated": "^3.8.0",
     "react-native-svg": "latest",
     "tailwindcss": "^3.4.1"
@@ -76,7 +76,7 @@
     "@types/react-native": "^0.72.2",
     "babel-loader": "^9.1.2",
     "postcss-loader": "^7.3.2",
-    "react-native-web": "~0.18.11",
+    "react-native-web": "^0.19.10",
     "typescript": "^5.1.3"
   },
   "private": true
