--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@gluestack-ui/config": "^1.1.5",
     "@gluestack-ui/themed": "^1.1.8",
     "@legendapp/motion": "latest",
-    "expo": "~50.0.7",
+    "expo": "^51.0.5",
     "expo-app-loading": "^2.1.1",
     "expo-crypto": "^12.8.1",
     "expo-font": "~11.1.1",
