--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "expo-status-bar": "~1.4.4",
     "expo-updates": "~0.16.4",
     "install": "^0.13.0",
+    "jscodeshift": "^0.15.2",
     "lucide-react-native": "^0.161.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
